# goat

./: .gitignore  AUTHORS  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  goat.code-workspace  package-lock.json  package.json
.husky/: pre-commit
python/: .gitignore  PUBLISHING.md  README.md  TODO  pyproject.toml
python/docs/: 1-installation-and-usage.md  2-set-up-the-project-locally.md  3-create-a-plugin.md  4-add-a-new-chain.md  5-add-a-wallet-provider.md
python/examples/: README.md
python/examples/by-framework/ag2/: OAI_CONFIG_LIST  README.md  example.py  pyproject.toml
python/examples/by-framework/crewai/: .env.template  README.md  example.py  example_smartwallet_delegated_signer.py  pyproject.toml
python/examples/by-framework/langchain/: README.md  example.py  pyproject.toml
python/examples/by-framework/openai-agents-sdk/: README.md  example.py  pyproject.toml
python/examples/by-framework/smolagents/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-framework/virtuals-game/: README.md
python/examples/by-framework/zerepy/: README.md
python/examples/by-use-case/dpsn-subscribe/: README.md  env.example  example.py  llm_example.py  pyproject.toml
python/examples/by-use-case/evm-mint-nft/: README.md  example.py  pyproject.toml
python/examples/by-use-case/evm-send-and-receive-tokens/: README.md  example.py  pyproject.toml
python/examples/by-use-case/evm-swap-tokens/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/solana-mint-nft/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/solana-send-and-receive-tokens/: README.md  example.py  pyproject.toml
python/examples/by-use-case/solana-swap-tokens/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/solana-swap-tokens-delegated-key/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/solana-usdc-yield-deposit/: .env.example  README.md  example.py  pyproject.toml
python/examples/by-wallet/crossmint/: .env.template  README.md  custodial_solana_wallet_example.py  pyproject.toml  smart_evm_wallet_example.py  solana_smart_wallet_creation_examples.py  solana_smart_wallet_delegated_signer_example.py  solana_smart_wallet_fireblocks_signer_example.py  solana_smart_wallet_keypair_admin_signer_example.py  solana_smart_wallet_swap_example.py  solana_smart_wallet_transfer_example.py
python/examples/by-wallet/crossmint/examples/: __init__.py  advanced_operations.py  delegated_signer.py  nft_operations.py  transaction_operations.py  wallet_management.py
python/examples/langchain/: example.py  pyproject.toml
python/examples/langchain/crossmint/: .env.template  README.md  pyproject.toml  smart_evm_wallet_example.py  solana_smart_wallet_example.py
python/examples/langchain/crossmint/examples/: README.md  signature_operations.py
python/examples/langchain/solana/: README.md  example.py  pyproject.toml
python/examples/langchain/uniswap/: .env.template  README.md  example.py  pyproject.toml
python/examples/langchain/web3/: example.py  pyproject.toml
python/examples/openai-agents-sdk/web3/: README.md  example.py  pyproject.toml
python/examples/solana/wallet/: .env.template  example.py  pyproject.toml
python/scripts/: create_plugin.py  version_bump.py
python/src/adapters/ag2/: README.md  pyproject.toml
python/src/adapters/crewai/: README.md  pyproject.toml
python/src/adapters/goat-adapter-langchain/: pyproject.toml
python/src/adapters/langchain/: README.md  pyproject.toml
python/src/adapters/openai_agents_sdk/: README.md  pyproject.toml
python/src/adapters/smolagents/: README.md  pyproject.toml
python/src/adapters/smolagents/goat_adapters/: __init__.py
python/src/goat-sdk/: README.md  pyproject.toml
python/src/goat-sdk/goat/: __init__.py
python/src/goat-sdk/goat/classes/: plugin_base.py  tool_base.py  wallet_client_base.py
python/src/goat-sdk/goat/decorators/: tool.py
python/src/goat-sdk/goat/types/: chain.py  token.py
python/src/goat-sdk/goat/utils/: add_parameters_to_description.py  create_tool_parameters.py  get_tools.py  snake_case.py
python/src/plugins/1inch/: README.md  pyproject.toml
python/src/plugins/allora/: README.md  pyproject.toml
python/src/plugins/coingecko/: README.md  pyproject.toml
python/src/plugins/debridge/: README.md  pyproject.toml
python/src/plugins/dexscreener/: README.md  pyproject.toml
python/src/plugins/dpsn/: README.md  pyproject.toml
python/src/plugins/erc20/: README.md  pyproject.toml
python/src/plugins/farcaster/: README.md  pyproject.toml
python/src/plugins/goat-plugin-coingecko/: pyproject.toml
python/src/plugins/goat-plugin-erc20/: pyproject.toml
python/src/plugins/headless/: README.md  pyproject.toml
python/src/plugins/jsonrpc/: README.md  pyproject.toml
python/src/plugins/jupiter/: README.md  pyproject.toml
python/src/plugins/lulo/: README.md  pyproject.toml
python/src/plugins/lulo/tests/: test_lulo.py
python/src/plugins/nansen/: README.md  pyproject.toml
python/src/plugins/opensea/: README.md  pyproject.toml
python/src/plugins/rugcheck/: README.md  pyproject.toml
python/src/plugins/spl_token/: README.md  pyproject.toml
python/src/plugins/superfluid/: README.md  pyproject.toml
python/src/plugins/uniswap/: README.md  pyproject.toml
python/src/plugins/uniswap/tests/: test_uniswap_plugin.py
python/src/wallets/crossmint/: README.md  pyproject.toml
python/src/wallets/crossmint/tests/: conftest.py  run_tests.sh  test_api_client.py  test_custodial_wallet.py  test_smart_wallet.py  test_solana_smart_wallet.py
python/src/wallets/evm/: README.md  pyproject.toml
python/src/wallets/goat-wallet-evm/: README.md  pyproject.toml
python/src/wallets/goat-wallet-web3/: pyproject.toml
python/src/wallets/multiversx/: README.md  pyproject.toml
python/src/wallets/solana/: README.md  pyproject.toml
python/src/wallets/web3/: README.md  pyproject.toml
python/tests/: test_create_tool.py  test_create_tool_parameters.py  test_plugin_base.py  test_tool.py
(+614 files in other folders)
