[tool.poetry]
name = "goat-sdk-wallet-crossmint"
version = "0.2.0"
description = "Crossmint wallet implementation for GOAT SDK"
authors = [
    "GOAT SDK Team",
]
readme = "README.md"
keywords = [
    "goat",
    "sdk",
    "web3",
    "agents",
    "ai",
    "crossmint",
    "wallet",
]
homepage = "https://ohmygoat.dev/"
repository = "https://github.com/goat-sdk/goat"
packages = [
    { include = "goat_wallets/crossmint" },
]

[tool.poetry.dependencies]
python = "^3.10"
goat-sdk = "^0.2.0"
goat-sdk-wallet-evm = "^0.2.0"
goat-sdk-wallet-solana = "^0.2.0"
web3 = ">=6.0.0"
eth-account = ">=0.8"
base58 = ">=2.1"
setuptools = ">=70"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"

[tool.poetry.group.dev.dependencies.goat-sdk]
path = "../../goat-sdk"
develop = true

[tool.poetry.group.dev.dependencies.goat-sdk-wallet-evm]
path = "../evm"
develop = true

[tool.poetry.group.dev.dependencies.goat-sdk-wallet-solana]
path = "../solana"
develop = true

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/goat-sdk/goat/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
